--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -22,7 +22,7 @@
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.dou_green{background:#87c442;color:#fff;padding:0 10px;border-radius:10px}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>em{display:block;padding:0 5px;margin-bottom:10px;}
 
-  .codes .lt_cnt .today_code{padding:8px 0;background:#000;margin:5px 0;text-align:center;}
+  .codes .lt_cnt .today_code{padding:8px 0;background:#000;margin:5px 0;text-align:center;border-radius:10px;}
   .codes .lt_cnt .today_code a{text-decoration:none;color:#fff;display:block;}
 
   .codes .lt_cnt .lt_sort_box{display:none;}
