--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -73,6 +73,275 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="31" data-price="44.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YZbJlh"><img src="https://m.media-amazon.com/images/I/81t-gBB+2ZL._AC_UL320_.jpg" alt="Flowtron BK-40D Electronic Insect Killer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>31% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YZbJlh">Flowtron BK-40D Electronic Insect Killer, 1 Acre Coverage</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$44.98</span><span class="ori_price">$64.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YZbJlh">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="5.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WAxUAN"><img src="https://m.media-amazon.com/images/I/91cmu9N7gAL._AC_UL320_.jpg" alt="Gorilla Super Glue Gel" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WAxUAN">Gorilla Super Glue Gel, 20 Gram, Clear</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$5.97</span><span class="ori_price">$14.89</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WAxUAN">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="44" data-price="14.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WFkjYX"><img src="https://m.media-amazon.com/images/I/517cJC1ys7L._AC_UL320_.jpg" alt="Lodge Cast Iron Skillet" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>44% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WFkjYX">Lodge Cast Iron Skillet, Pre-Seasoned and Ready for Stove Top or Oven Use, 10.25", Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.90</span><span class="ori_price">$26.68</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WFkjYX">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="36" data-price="25.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EMS00H"><img src="https://m.media-amazon.com/images/I/61FvlpW3MCL._AC_UL320_.jpg" alt="Philips Avent Fast Baby Bottle Warmer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>36% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EMS00H">Philips Avent Fast Baby Bottle Warmer, SCF355/00 </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$25.49</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EMS00H">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="31" data-price="68.75">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QF4eNn"><img src="https://m.media-amazon.com/images/I/71GbgCR95aL._AC_UL320_.jpg" alt="Ninja BL480D Nutri Ninja" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>31% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QF4eNn">Ninja BL480D Nutri Ninja with 1000 Watt Auto-IQ Base for Juices, Shakes & Smoothies Personal Blender 18 and 24 oz. Black/Silver</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$68.75</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QF4eNn">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="43" data-price="171.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ELAQQY"><img src="https://m.media-amazon.com/images/I/613VxryCy+L._AC_UL320_.jpg" alt="Samsung Gear Sport Smartwatch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>43% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ELAQQY">Samsung Gear Sport Smartwatch (Bluetooth), Black, SM-R600NZKAXAR – US Version with Warranty</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$171.00</span><span class="ori_price">$299.98</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ELAQQY">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="49" data-price="88.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z12XDi"><img src="https://m.media-amazon.com/images/I/91BXArd7WML._AC_UL320_.jpg" alt="Citizen Watches Men's" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>49% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z12XDi">Citizen Watches Men's BM8180-03E</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$88.98</span><span class="ori_price">$175.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Z12XDi">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="32" data-price="12.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Z2jBSW"><img src="https://images-na.ssl-images-amazon.com/images/I/81jENTZX6UL._SX522_.jpg" alt="Dr. Orthotics" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>32% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Z2jBSW">Dr. Scholl's HEAVY DUTY SUPPORT Pain Relief Orthotics (Men's 8-14) // Designed for Men over 200lbs </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$12.97</span><span class="ori_price">$18.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Z2jBSW">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="17.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QGnD0r"><img src="https://m.media-amazon.com/images/I/61ImdOD9grL._AC_UL320_.jpg" alt="Master Lock " /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QGnD0r">Master Lock 7120D Money Bag with Key Lock 11-1/2 in. Long, Blue</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$17.49</span><span class="ori_price">$24.21</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QGnD0r">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YXJEuL"><img src="https://images-na.ssl-images-amazon.com/images/I/81oLNW6ioyL._UY679_.jpg" alt="Casio Women's" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YXJEuL">Casio Women's LRW200H-7BVCF Dive Series Sport Watch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$29.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YXJEuL">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="47" data-price="18.45">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QEaJjE"><img src="https://m.media-amazon.com/images/I/71gLljD9wwL._AC_UL320_.jpg" alt="Samsonite Foldable Luggage Cover" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>47% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QEaJjE">Samsonite Foldable Luggage Cover Large, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$18.45</span><span class="ori_price">$34.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QEaJjE">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IaSizg"><img src="https://m.media-amazon.com/images/I/810AkkpqgsL._AC_UL320_.jpg" alt="Philips Rechargeable Toothbrush" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IaSizg">Philips Sonicare Essence Sonic Rechargeable Toothbrush, White </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IaSizg">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YZaQcv"><img src="https://m.media-amazon.com/images/I/61p9Vow7ghL._AC_UL320_.jpg" alt="Sheamoisture Manuka Honey &Mafura Oil" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YZaQcv">Sheamoisture Manuka Honey &Mafura Oil Intensive Hydration Treatment Masque, 12 Oz</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.49</span><span class="ori_price">$20.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YZaQcv">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="11.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IdDO1t"><img src="https://m.media-amazon.com/images/I/91JUnjcSQbL._AC_UL320_.jpg" alt="Deodorant" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IdDO1t">Secret Antiperspirant and Deodorant for Women, Powder Fresh Scent, Invisible Solid, pH Balanced, 2.6 oz (Pack of 6) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.98</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2IdDO1t">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="28" data-price="9.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ml5sir"><img src="https://m.media-amazon.com/images/I/91TDMAPuy+L._AC_UL320_.jpg" alt="Softsoap Liquid Hand Soap" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ml5sir">Softsoap Liquid Hand Soap, Aquarium - 7.5 fluid ounce (Pack of 6) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.74</span><span class="ori_price">$13.53</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ml5sir">Shop Now</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="37" data-price="discounted_price">
   <div class="image_box">
