--- a/app/views/deals_days/_lt_cnt.html.erb
+++ b/app/views/deals_days/_lt_cnt.html.erb
@@ -32,7 +32,7 @@
   </ul>
 </div>
 <div class="today_code">
- <a href="/deals/bestdeals">Today's PromoCodes</a>
+ <a href="/deals/bestdeals">Today's The Best Deals</a>
 </div>
 
 <div class="lt_sort_box clearfix">
