--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -114,7 +114,7 @@
   .codes .card_wrap{/*column-width:170px;*/column-gap:5px;column-count:1;}
   .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;border-bottom:1px solid #ddd;}
   .codes .card_wrap .card .image_box{text-align:center;}
-  .codes .card_wrap .card .image_box img{width:70%;}
+  .codes .card_wrap .card .image_box img{width:70%;height:200px;object-fit:contain;margin-bottom:50px;}
   .codes .card_wrap .card .inner{padding:7px;font-family: 'Montserrat', sans-serif;font-weight:400}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
