--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -71,8 +71,8 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Mn4ySD">imesrun Womens Short Sleeve V Neck Summer Shirts Cotton Basic Tees Casual Blouses Top</a></p>
     <div class="code_high">
-      <address><span class="dis_price">$9.79</span><span class="ori_price">$Origianl_price</span></address>
-      <p><span>Take <strong>30% off at $Origianl_price</strong> with promo code: <strong>30MBFERT</strong></span></p>
+      <address><span class="dis_price">$9.79</span><span class="ori_price">$13.99</span></address>
+      <p><span>Take <strong>30% off at $13.99</strong> with promo code: <strong>30MBFERT</strong></span></p>
       <span class="ex_date">Expiration Date : Jun 02, 2019 at 11:59 PM PDT</span>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
